(fix): Better support for export screen

--- a/src/app/pages/ticket/ticket.component.css
+++ b/src/app/pages/ticket/ticket.component.css
@@ -1,7 +1,7 @@
 mat-list.screen {
     display: flex;
     flex-direction: row;
-    max-width: 100%;
+    width: 2000px;
     flex-wrap: wrap;
 }
 
