feat: Working color picker + Update manager (service worker) + Moved fonts to static asset

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [class.dark-theme]="darkMode$ | async" [style.height]="'100%'" class="mat-app-background" fxLayout="column">
+<div [style.height]="'100%'" class="mat-app-background" fxLayout="column">
     <mat-toolbar>
         <h1 fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
             <mat-icon>price_change</mat-icon>
