feat: People editor + Extract people creation to a dedicated component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
                         Coucou, j'ai fait ce p'tit projet pour
                         gérer les finances à la maison et partager
                         les tickets de courses équitablement en
-                        fonction de la consomation des gens.
+                        fonction de la consommation des gens.
                         <br><br>
                         Le code source est dispo sur
                         <a href="https://github.com/EnzDev/Tickets-Thunes" rel="noreferrer noopener nofollow"
